--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,11 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
+    implementation group: 'org.openjdk.jol', name: 'jol-core', version: '0.14'
+//    compileOnly group: 'org.openjdk.jol', name: 'jol-core', version: '0.14'
+
 }
+
 
 test {
     useJUnitPlatform()
